--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,32 @@ requests==2.32.2
 networkx==3.4.2
 matplotlib==3.9.2
 nxviz==0.7.6
+IPython
+ast
+bs4
+collections
+copy
+countryinfo
+functools
+igraph
+imageio
+ipytree
+itertools
+json
+math
+matplotlib
+multiprocessing
+networkx
+numpy
+os
+pandas
+pickle
+plotly
+powerlaw
+random
+re
+requests
+seaborn
+time
+tqdm
+xml
